# AutoEDA

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE_NOTES.md  pyproject.toml
.github/workflows/: ci.yml
examples/: full_workflow.py
src/autoeda/: __init__.py  analytics.py  config.py  exceptions.py  insight_engine.py  profiler.py  report_generator.py  utils.py  visualization.py
tests/: conftest.py  test_analytics.py  test_config.py  test_insight_engine.py  test_pipeline.py  test_profiler.py  test_report_generator.py  test_utils.py  test_visualization.py
