[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autoeda"
dynamic = ["version"]
description = "Automated Exploratory Data Analysis for professional BI reporting"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Arasoul" },
]
keywords = [
    "eda",
    "exploratory-data-analysis",
    "data-profiling",
    "business-intelligence",
    "statistics",
    "visualization",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.13.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
pdf = [
    "weasyprint>=60.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pandas-stubs>=2.1.0",
]

[project.urls]
Homepage = "https://github.com/Arasoul/AutoEDA"
Repository = "https://github.com/Arasoul/AutoEDA"
Issues = "https://github.com/Arasoul/AutoEDA/issues"

[tool.hatch.version]
path = "src/autoeda/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/autoeda"]

[tool.ruff]
target-version = "py311"
line-length = 99
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["autoeda"]

[tool.coverage.report]
fail_under = 85
show_missing = true
